🐛  fix session view alignment issue closes #4

--- a/frontend/themes/apus/views/conference-view.css
+++ b/frontend/themes/apus/views/conference-view.css
@@ -30,3 +30,82 @@
     font-size: 30px;
     margin: 10px;
 }
+
+.session-view {
+    position: absolute;
+}
+
+#session-0 {
+    top: 57px;
+    left: 0;
+}
+
+#session-1 {
+    top: 57px;
+    left: 430px;
+}
+
+#session-2 {
+    top: 57px;
+    left: 860px;
+}
+
+#session-3 {
+    top: 261px;
+    left: 0;
+}
+
+#session-4 {
+    top: 261px;
+    left: 430px;
+}
+
+#session-5 {
+    top: 261px;
+    left: 860px;
+}
+
+#session-6 {
+    top: 465px;
+    left: 0;
+}
+
+#session-7 {
+    top: 465px;
+    left: 430px;
+}
+
+#session-8 {
+    top: 465px;
+    left: 860px;
+}
+
+#session-9 {
+    top: 669px;
+    left: 0;
+}
+
+#session-10 {
+    top: 669px;
+    left: 430px;
+}
+
+#session-11 {
+    top: 669px;
+    left: 860px;
+}
+
+#session-12 {
+    top: 873px;
+    left: 0;
+}
+
+#session-13 {
+    top: 873px;
+    left: 430px;
+}
+
+#session-14 {
+    top: 873px;
+    left: 860px;
+}
